修改图片格式

--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -220,7 +220,7 @@ A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$
 	\label{fig:model-creation}
 \end{figure}
 
-In Fig. \ref{fig:model-creation}, voids with different size: 2\AA, 5\AA, 10\AA, 15\AA\ were placed  at $\alpha_2-\gamma$ phase boundary, inside $\gamma$ phase respectively. The strength of materials with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The existence of void have little impact on the elastic properties of the material, and the model without void defect has the best strength 5.3 GPa, the yield stress of model with void is smaller. Void at $\alpha_2$-$\gamma$ phase boundary  detracts the strength of  material most, and the void inside $\alpha_2$ phase  have less impact on the strength.          
+In Fig. \ref{fig:model-creation}, voids with different size: 2\AA, 5\AA, 10\AA, 15\AA\ were placed  at $\alpha_2$/$\gamma$ phase boundary, inside $\gamma$ phase respectively. The strength of materials with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The existence of void have little impact on the elastic properties of the material, and the model without void defect has the best strength 5.3 GPa, the yield stress of model with void is smaller. Void at $\alpha_2$-$\gamma$ phase boundary  detracts the strength of  material most, and the void inside $\alpha_2$ phase  have less impact on the strength.          
 Conventional definition of strength of materials with geometry subtraction was applied to the model, and theoretical strength of the models was calculated by
 \begin{equation} \label{eq:section} 
 \sigma^* = \sigma_0 \cdot \frac{A^*}{A_0}
